--- a/package.json
+++ b/package.json
@@ -13,7 +13,8 @@
     "react": "18.2.0",
     "react-dom": "18.2.0",
     "react-icons": "^4.4.0",
-    "react-paginate": "^8.1.3"
+    "react-paginate": "^8.1.3",
+    "sass": "^1.53.0"
   },
   "devDependencies": {
     "eslint": "8.17.0",
